--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf dist && swc ./src -d dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:docker": "yarn build && yarn start"
   },
   "dependencies": {
     "express": "^4.18.2",
