--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rm -rf dist && swc ./src -d dist",
     "start": "node dist/index.js",
-    "start:docker": "yarn build && yarn start"
+    "start:docker": "yarn build && node --inspect=0.0.0.0 dist/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
